ajout fichiers structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8"/>
-    <title>Chanel</title>
+    <title>Portfolio</title>
+
+    <link rel="stylesheet" href="css/styles.css"/>
 
 </head>
 <body>
@@ -14,9 +16,18 @@
         <li><a href="#">bla</a></li>
     </ul>
 </nav>
-<section></section>
-<section></section>
-<section></section>
+<section>
+    Section à propos
+</section>
+<section>
+    Section liste projets
+</section>
+<section>
+    Section contact
+</section>
 
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/init.js"></script>
+<script type="text/javascript" src="js/layout.js"></script>
 </body>
 </html>
