modif structure css

--- a/index.html
+++ b/index.html
@@ -16,32 +16,34 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+        <div id="main">
+            <nav>
+                <div class="navContent">
+                    <ul>
+                        <li><a href="#">bla</a></li>
+                        <li><a href="#">bla</a></li>
+                        <li><a href="#">bla</a></li>
+                        <li><a href="#">bla</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <section>
+                Section à propos
+            </section>
+            <section>
+                Section liste projets
+            </section>
+            <section>
+                Section contact
+            </section>
 
+            <!--[if lt IE 7]>
+                <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+            <![endif]-->
 
-        <nav>
-            <ul>
-                <li><a href="#">bla</a></li>
-                <li><a href="#">bla</a></li>
-                <li><a href="#">bla</a></li>
-                <li><a href="#">bla</a></li>
-            </ul>
-        </nav>
-        <section>
-            Section à propos
-        </section>
-        <section>
-            Section liste projets
-        </section>
-        <section>
-            Section contact
-        </section>
-
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+            <!-- Add your site or application content here -->
+            <p>Hello world! This is HTML5 Boilerplate.</p>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
