--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -16,33 +16,102 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+        <!--[if lt IE 7]>
+        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
+
         <div id="main">
+            <header>
+                    Header
+            </header>
             <nav>
                 <div class="navContent">
                     <ul>
-                        <li><a href="#">bla</a></li>
-                        <li><a href="#">bla</a></li>
-                        <li><a href="#">bla</a></li>
-                        <li><a href="#">bla</a></li>
+                        <li><a href="#showcase">A propos</a></li>
+                        <li><a href="#projets">Projets</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#cv">CV</a></li>
                     </ul>
                 </div>
             </nav>
-            <section>
-                Section à propos
-            </section>
-            <section>
-                Section liste projets
-            </section>
-            <section>
-                Section contact
+            <section id="showcase">
+                <h1>Bla</h1>
+                    <a href=""></a>
+                    <ul>
+                        <li>
+                            <img src="" alt=""/>
+                            <p>bla bla bla bla</p>
+                        </li>
+                        <li>
+                            <img src="" alt=""/>
+                            <p>bla bla bla bla</p>
+                        </li>
+                        <li>
+                            <img src="" alt=""/>
+                            <p>bla bla bla bla</p>
+                        </li>
+                    </ul>
             </section>
 
-            <!--[if lt IE 7]>
-                <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-            <![endif]-->
+            <section id="projets">
+                <h1>Projets</h1>
+                <ul>
+                    <li><a href="#"><img src="" alt=""/></a></li>
+                    <li><a href="#"><img src="" alt=""/></a></li>
+                    <li><a href="#"><img src="" alt=""/></a></li>
+                    <li><a href="#"><img src="" alt=""/></a></li>
+                    <li><a href="#"><img src="" alt=""/></a></li>
+                    <li><a href="#"><img src="" alt=""/></a></li>
+                </ul>
+            </section>
 
-            <!-- Add your site or application content here -->
-            <p>Hello world! This is HTML5 Boilerplate.</p>
+            <section id="cv">
+                <h1>CV</h1>
+                <h2>Compétences</h2>
+                <h2>Experience Pro</h2>
+                <h2>Formation</h2>
+                <h2>Loisir</h2>
+            </section>
+
+            <section id="contact">
+                <h1>Contact</h1>
+
+                <form action="">
+                    <div>
+                        <label for="nom">Nom</label>
+                        <input type="text" id="nom" placeholder="Votre Nom"/>
+                    </div>
+                    <div>
+                        <label for="firstN">Prénom</label>
+                        <input type="text" id="firstN" placeholder="Votre prénom"/>
+                    </div>
+                    <div>
+                        <label for="company">Société</label>
+                        <input type="text" id="company" placeholder="Société"/>
+                    </div>
+                    <div>
+                        <label for="tel">Numéro de téléphone</label>
+                        <input type="text" id="tel" placeholder="Téléphone"/>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="text" id="email" placeholder="Email"/>
+                    </div>
+                    <div>
+                        <label for="message">Votre message</label>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
+                    </div>
+                </form>
+            </section>
+
+            <footer>
+                <ul>
+                    <li><a href="#showcase">A propos</a></li>
+                    <li><a href="#projets">Projets</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#cv">CV</a></li>
+                </ul>
+            </footer>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
