--- a/index.html
+++ b/index.html
@@ -23,85 +23,95 @@
 
         <div id="main">
             <header>
-                    <h1>Bryann Le Moigne</h1>
-            </header>
-            <nav>
                 <div class="inner">
+                    <nav>
+                        <ul>
+                            <li><a href="#showcase">A propos</a></li>
+                            <li><a href="#projets">Projets</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#cv">CV</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="inner">
+                    <h1>Bryann Le Moigne</h1>
+                </div>
+            </header>
+            <section id="showcase">
+                <div class="inner">
+                    <h1>Bla</h1>
                     <ul>
-                        <li><a href="#showcase">A propos</a></li>
-                        <li><a href="#projets">Projets</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="#cv">CV</a></li>
+                        <li>
+                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
+                        </li>
+                        <li>
+                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
+                        </li>
+                        <li>
+                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
+                        </li>
                     </ul>
                 </div>
-            </nav>
-            <section id="showcase">
-                <h1>Bla</h1>
-                    <ul>
-                        <li>
-                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
-                        </li>
-                        <li>
-                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
-                        </li>
-                        <li>
-                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
-                        </li>
-                    </ul>
             </section>
 
             <section id="projets">
-                <h1>Projets</h1>
-                <ul>
-                    <li><a href="#"><img src="" alt=""/></a></li>
-                    <li><a href="#"><img src="" alt=""/></a></li>
-                    <li><a href="#"><img src="" alt=""/></a></li>
-                    <li><a href="#"><img src="" alt=""/></a></li>
-                    <li><a href="#"><img src="" alt=""/></a></li>
-                    <li><a href="#"><img src="" alt=""/></a></li>
-                </ul>
+                <div class="inner">
+                    <h1>Projets</h1>
+                    <ul>
+                        <li><a href="#"><img src="" alt=""/></a></li>
+                        <li><a href="#"><img src="" alt=""/></a></li>
+                        <li><a href="#"><img src="" alt=""/></a></li>
+                        <li><a href="#"><img src="" alt=""/></a></li>
+                        <li><a href="#"><img src="" alt=""/></a></li>
+                        <li><a href="#"><img src="" alt=""/></a></li>
+                    </ul>
+                </div>
             </section>
 
             <section id="cv">
-                <h1>CV</h1>
-                <h2>Compétences</h2>
-                <h2>Experience Pro</h2>
-                <h2>Formation</h2>
-                <h2>Loisir</h2>
+                <div class="inner">
+                    <h1>CV</h1>
+                    <h2>Compétences</h2>
+                    <h2>Experience Pro</h2>
+                    <h2>Formation</h2>
+                    <h2>Loisir</h2>
+                </div>
             </section>
 
             <section id="contact">
-                <h1>Contact</h1>
+                <div class="inner">
+                    <h1>Contact</h1>
 
-                <form action="">
-                    <div>
-                        <label for="nom">Nom</label>
-                        <input type="text" id="nom" placeholder="Votre Nom"/>
-                    </div>
-                    <div>
-                        <label for="firstN">Prénom</label>
-                        <input type="text" id="firstN" placeholder="Votre prénom"/>
-                    </div>
-                    <div>
-                        <label for="company">Société</label>
-                        <input type="text" id="company" placeholder="Société"/>
-                    </div>
-                    <div>
-                        <label for="tel">Numéro de téléphone</label>
-                        <input type="text" id="tel" placeholder="Téléphone"/>
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="text" id="email" placeholder="Email"/>
-                    </div>
-                    <div>
-                        <label for="message">Votre message</label>
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
-                    </div>
-                    <div>
-                        <button type="submit">Envoyer</button>
-                    </div>
-                </form>
+                    <form action="">
+                        <div>
+                            <label for="nom">Nom</label>
+                            <input type="text" id="nom" placeholder="Votre Nom"/>
+                        </div>
+                        <div>
+                            <label for="firstN">Prénom</label>
+                            <input type="text" id="firstN" placeholder="Votre prénom"/>
+                        </div>
+                        <div>
+                            <label for="company">Société</label>
+                            <input type="text" id="company" placeholder="Société"/>
+                        </div>
+                        <div>
+                            <label for="tel">Numéro de téléphone</label>
+                            <input type="text" id="tel" placeholder="Téléphone"/>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="text" id="email" placeholder="Email"/>
+                        </div>
+                        <div>
+                            <label for="message">Votre message</label>
+                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
+                        </div>
+                        <div>
+                            <button type="submit">Envoyer</button>
+                        </div>
+                    </form>
+                </div>
             </section>
         </div>
         <footer>
@@ -120,6 +130,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/init.js"></script>
         <script src="js/layout.js"></script>
+        <script src="js/navigation.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
