--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery-ui-1.10.2.custom.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/init.js"></script>
         <script src="js/layout.js"></script>
