--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/modules.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -40,17 +41,21 @@
             <section id="showcase">
                 <div class="inner">
                     <h1>Bla</h1>
-                    <ul>
-                        <li>
-                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
-                        </li>
-                        <li>
-                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
-                        </li>
-                        <li>
-                            <article><img src="" alt=""/> <p>bla bla bla</p></article>
-                        </li>
-                    </ul>
+                    <div id="carousel">
+                        <div class="carouselWrapper">
+                            <ul>
+                                <li>
+                                    <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
+                                </li>
+                                <li>
+                                    <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
+                                </li>
+                                <li>
+                                    <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -132,6 +137,7 @@
         <script src="js/init.js"></script>
         <script src="js/layout.js"></script>
         <script src="js/navigation.js"></script>
+        <script src="js/carousel.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
