--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/modules.css">
+        <link rel="stylesheet" href="css/fonts.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -45,7 +46,7 @@
                         <div class="carouselWrapper">
                             <ul>
                                 <li>
-                                    <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
+                                    <article><img src="img/carousel/test.jpg" alt=""/> <p><div data-icon="a">User</div></p></article>
                                 </li>
                                 <li>
                                     <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
