modif carousel.js

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     <div id="carousel">
                         <div class="carouselWrapper">
                             <ul>
-                                <li>
+                                <li class="1">
                                     <article><img src="img/carousel/test.jpg" alt=""/> <p><div data-icon="a">User</div></p></article>
                                 </li>
-                                <li>
+                                <li class="2">
                                     <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
                                 </li>
-                                <li>
+                                <li class="3">
                                     <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
                                 </li>
                             </ul>
