--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/contexts.css">
         <link rel="stylesheet" href="css/modules.css">
         <link rel="stylesheet" href="css/fonts.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -89,33 +90,39 @@
                     <h1>Contact</h1>
 
                     <form action="">
-                        <div>
-                            <label for="nom">Nom</label>
-                            <input type="text" id="nom" placeholder="Votre Nom"/>
-                        </div>
-                        <div>
-                            <label for="firstN">Prénom</label>
-                            <input type="text" id="firstN" placeholder="Votre prénom"/>
-                        </div>
-                        <div>
-                            <label for="company">Société</label>
-                            <input type="text" id="company" placeholder="Société"/>
-                        </div>
-                        <div>
-                            <label for="tel">Numéro de téléphone</label>
-                            <input type="text" id="tel" placeholder="Téléphone"/>
-                        </div>
-                        <div>
-                            <label for="email">Email</label>
-                            <input type="text" id="email" placeholder="Email"/>
-                        </div>
-                        <div>
-                            <label for="message">Votre message</label>
-                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
-                        </div>
-                        <div>
-                            <button type="submit">Envoyer</button>
-                        </div>
+                        <fieldset class="column">
+                            <div>
+                                <label for="nom">Name*</label>
+                                <input type="text" id="nom"/>
+                            </div>
+                            <div>
+                                <label for="firstN">First Name*</label>
+                                <input type="text" id="firstN"/>
+                            </div>
+                        </fieldset>
+                        <fieldset class="column">
+                            <div>
+                                <label for="company">Société</label>
+                                <input type="text" id="company"/>
+                            </div>
+                            <div>
+                                <label for="tel">Numéro de téléphone</label>
+                                <input type="text" id="tel"/>
+                            </div>
+                            <div>
+                                <label for="email">Email*</label>
+                                <input type="text" id="email"/>
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <div>
+                                <label for="message">Votre message*</label>
+                                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                            </div>
+                            <div>
+                                <button type="submit">Envoyer</button>
+                            </div>
+                        </fieldset>
                     </form>
                 </div>
             </section>
