modif carousel.js + ajout fonts + modif design home + modif form contact

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/ui-elements.css">
         <link rel="stylesheet" href="css/contexts.css">
         <link rel="stylesheet" href="css/modules.css">
         <link rel="stylesheet" href="css/fonts.css">
@@ -47,13 +48,28 @@
                         <div class="carouselWrapper">
                             <ul>
                                 <li class="1">
-                                    <article><img src="img/carousel/test.jpg" alt=""/> <p><div data-icon="a">User</div></p></article>
+                                    <article>
+                                        <div class="media">
+                                            <img src="img/carousel/test.jpg" alt=""/>
+                                        </div>
+                                        <p>bla bla bla</p>
+                                    </article>
                                 </li>
                                 <li class="2">
-                                    <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
+                                    <article>
+                                        <div class="media">
+                                            <img src="img/carousel/test.jpg" alt=""/>
+                                        </div>
+                                        <p>bla bla bla</p>
+                                    </article>
                                 </li>
                                 <li class="3">
-                                    <article><img src="img/carousel/test.jpg" alt=""/> <p>bla bla bla</p></article>
+                                    <article>
+                                        <div class="media">
+                                            <img src="img/carousel/test.jpg" alt=""/>
+                                        </div>
+                                        <p>bla bla bla</p>
+                                    </article>
                                 </li>
                             </ul>
                         </div>
@@ -147,6 +163,7 @@
         <script src="js/layout.js"></script>
         <script src="js/navigation.js"></script>
         <script src="js/carousel.js"></script>
+        <script src="js/form.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
